# thalos

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  entities.json  game_log.txt  justfile  orbital-mechanics-mvp-spec.md
.cargo/: config.toml
.codex/environments/: environment.toml
.github/workflows/: build-game.yml
assets/: parts.ron  simple_solar_system.kdl  solar_system.kdl  solar_system.ron
assets/bodies/: auron.ron  mira.ron  nereus.ron  pelagos.ron  thalos.ron  vaelen.ron
assets/shaders/: film_grain.wgsl  galaxy.wgsl  galaxy_prepass.wgsl  gas_giant.wgsl  lens_flare.wgsl  lens_flare_halo.wgsl  planet_impostor.wgsl  ring.wgsl  ship_part.wgsl  solid_planet.wgsl  stars.wgsl  stars_prepass.wgsl
crates/atmosphere_gen/: Cargo.toml
crates/atmosphere_gen/src/: lib.rs
crates/bake_dump/: Cargo.toml
crates/bake_dump/src/: main.rs
crates/celestial/: Cargo.toml
crates/celestial/src/: catalog.rs  coords.rs  lib.rs  spectrum.rs
crates/celestial/src/generate/: galaxies.rs  mod.rs  stars.rs
crates/celestial/src/render/: cubemap.rs  mod.rs  psf.rs
crates/celestial/src/sources/: galaxy.rs  mod.rs  nebula.rs  star.rs
crates/cloud_gen/: Cargo.toml
crates/cloud_gen/examples/: bake_time.rs
crates/cloud_gen/src/: bake.rs  flow.rs  lib.rs  worley.rs
crates/erosion_filter/: Cargo.toml  LICENSE-MIT  README.md  THIRD-PARTY-NOTICES.md
crates/erosion_filter/assets/shaders/: erosion.wgsl  erosion_demo.wgsl
crates/erosion_filter/examples/: plane_demo.rs
crates/erosion_filter/src/: cpu.rs  lib.rs
crates/game/: Cargo.toml
crates/game/src/: autopilot.rs  body_tree_panel.rs  bridge.rs  camera.rs  controls.rs  coords.rs  debug.rs  engine.rs  fuel.rs  ghost_bodies.rs  hud.rs  main.rs  navigation.rs  photo_mode.rs  reflection_probe.rs  rendering.rs  screenshot.rs  ship_view.rs  sky_render.rs  star_flare.rs  target.rs  trajectory_rendering.rs  view.rs  warp_to_maneuver.rs
crates/game/src/flight_plan_view/: ghost.rs  markers.rs  mod.rs  render.rs  view.rs
crates/game/src/maneuver/: helpers.rs  mod.rs  panel.rs  state.rs
crates/game/src/maneuver/interaction/: events.rs  input.rs  mod.rs  observers.rs
crates/game/src/maneuver/render/: arrows.rs  markers.rs  mod.rs
crates/game/src/rendering/: body_lod.rs  generation.rs  lighting.rs  materials.rs  mod.rs  spawn.rs  trails.rs  transforms.rs  types.rs
crates/physics/: Cargo.toml
crates/physics/examples/: stability_diagnostic.rs
crates/physics/src/: body_state_provider.rs  debug_orbits.rs  ephemeris.rs  ephemeris_generator.rs  gravity_mode.rs  integrator.rs  lib.rs  maneuver.rs  orbital_math.rs  parsing.rs  patched_conics.rs  ship_propagator.rs  simulation.rs  trajectory.rs  types.rs
crates/physics/src/effects/: gravity.rs  mod.rs  thrust.rs
crates/physics/src/forces/: gravity.rs  mod.rs  thrust.rs
crates/physics/src/trajectory/: events.rs  flight_plan.rs  mod.rs  numeric.rs  propagation.rs  tests.rs
crates/planet_editor/: Cargo.toml
crates/planet_editor/src/: main.rs  sky_backdrop.rs
crates/planet_gen/: Cargo.toml
crates/planet_gen/src/: crater.rs  derived.rs  descriptor.rs  detail.rs  giant_basin.rs  lib.rs  main_craters.rs  mare.rs  maturity.rs  pipeline.rs  primordial.rs  reference_bodies.rs  sampling.rs  seeding.rs  surface.rs
crates/planet_rendering/: Cargo.toml
crates/planet_rendering/src/: bake.rs  film_grain.rs  gas_giant.rs  lib.rs  lighting.rs  material.rs  post_stack.rs  reference_clouds.rs  rings.rs  shader_types.rs  solid_planet.rs  texture.rs
crates/planet_rendering/src/shaders/: atmosphere.wgsl  lighting.wgsl  noise.wgsl
crates/ship_rendering/: Cargo.toml
crates/ship_rendering/src/: lib.rs  material.rs
crates/shipyard/: Cargo.toml
crates/shipyard/examples/: roundtrip.rs
crates/shipyard/src/: attach.rs  blueprint.rs  catalog.rs  lib.rs  part.rs  recompute.rs  resource.rs  sizing.rs  stats.rs
crates/terrain_gen/: Cargo.toml  build.rs
crates/terrain_gen/examples/: bake_bench.rs  dump_thalos.rs
crates/terrain_gen/src/: biome_mask.rs  body_builder.rs  body_data.rs  cache.rs  crater_profile.rs  cubemap.rs  drainage.rs  feature_compiler.rs  generator.rs  height_generator.rs  icosphere.rs  lib.rs  noise.rs  province.rs  sample.rs  seeding.rs  spatial_index.rs  stage.rs  surface_field.rs  terrain_config.rs  types.rs  vaelen_field.rs
crates/terrain_gen/src/stages/: biomes.rs  climate.rs  coarse_elevation.rs  cratering.rs  differentiate.rs  hydrological_carving.rs  mare_flood.rs  megabasin.rs  mod.rs  noise_fbm.rs  orogen_dla.rs  paint_biomes.rs  plates.rs  regolith.rs  scarps.rs  space_weather.rs  surface_materials.rs  tectonic_skeleton.rs  tectonics.rs  topography.rs  util.rs  vaelen_impacts.rs
crates/terrain_gen/tests/: cache_roundtrip.rs  coarse_elevation.rs  mira_pipeline.rs  ron_format.rs  surface_materials.rs  tectonic_skeleton.rs  thalos_pipeline.rs
docs/: celestial.md  dla-terrain-notes.md  gas_giant_rendering.md  mira_processes.md  new_physics.md  orbital_mechanics.md  planet_aesthetics.md  procedural_mira.md  reflection_probe.md  simulation_architecture.md  solar_system.md  surface_generator_design.md  terrain_feature_compiler.md  thalos_noise_spec.md
docs/lore/: civilization.md  solar_system.md
docs/stale/: DESIGN.md  orbital-mechanics-mvp-spec.md  orbital_mechanics.md  solar_system_old.md  thalos_planetgen_spec.md
scripts/: analyze_trace.py  bump-version.sh
ships/: apollo.ron  apollo_booster.ron
