[package]
name = "thalos_celestial"
version.workspace = true
edition.workspace = true

[dependencies]
glam = { version = "0.30", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.9", default-features = false, features = ["std", "std_rng"] }
rand_chacha = "0.9"
rand_distr = "0.5"
rayon = "1.10"

[dev-dependencies]
approx = "0.5"
