[package]
name = "thalos_game"
version.workspace = true
edition.workspace = true

[dependencies]
thalos_physics = { path = "../physics" }
thalos_planet_rendering = { path = "../planet_rendering" }
thalos_terrain_gen = { path = "../terrain_gen" }
thalos_celestial = { path = "../celestial" }
bevy = { version = "0.18", features = ["wayland"] }
bevy_egui = "0.39"
tracing = "0.1"

[features]
# Profiling. Enable one at a time. Chrome produces trace-*.json in cwd;
# Tracy streams to a running Tracy client over localhost.
profile-chrome = ["bevy/trace_chrome"]
profile-tracy = ["bevy/trace_tracy"]
dev = ["bevy/dynamic_linking", "thalos_planet_rendering/dev"]
