[package]
name = "thalos_physics"
version.workspace = true
edition.workspace = true

[dependencies]
glam = { version = "0.30", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.12"
tracing = "0.1"
thalos_terrain_gen = { path = "../terrain_gen" }
thalos_atmosphere_gen = { path = "../atmosphere_gen" }

[dev-dependencies]
approx = "0.5"
