[package]
name = "thalos_shipyard"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = "0.18"
bevy_egui = "0.39"
glam = { version = "0.30", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.12"
thalos_ship_rendering = { path = "../ship_rendering" }
thalos_celestial = { path = "../celestial" }

[[example]]
name = "roundtrip"
path = "examples/roundtrip.rs"

[[bin]]
name = "ship_editor"
path = "src/bin/ship_editor.rs"
