[package]
name = "thalos_terrain_gen"
version.workspace = true
edition.workspace = true

[dependencies]
glam = { version = "0.30", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
zstd = "0.13"
rayon = "1.10"
noise = "0.9"

[dev-dependencies]
ron = "0.12"
